--- a/Ohio.Counties.Franklin.MessageBus.Client2/Ohio.Counties.Franklin.MessageBus.Client2.csproj
+++ b/Ohio.Counties.Franklin.MessageBus.Client2/Ohio.Counties.Franklin.MessageBus.Client2.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1FBA9071-C703-4627-A045-5702E7D2554B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{D2EEA61D-BB0C-4DCC-9014-CB5B5C08563D}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ohio.Counties.Franklin.MessageBus.Server</RootNamespace>
-    <AssemblyName>Ohio.Counties.Franklin.MessageBus.Server</AssemblyName>
+    <RootNamespace>Ohio.Counties.Franklin.MessageBus.Client2</RootNamespace>
+    <AssemblyName>Ohio.Counties.Franklin.MessageBus.Client2</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -35,38 +35,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\..\packages\FluentNHibernate.1.3.0.717\lib\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
     <Reference Include="Magnum">
-      <HintPath>..\..\packages\Magnum.2.0.0.4\lib\NET40\Magnum.dll</HintPath>
+      <HintPath>..\packages\Magnum.2.0.0.4\lib\NET40\Magnum.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit">
-      <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.dll</HintPath>
-    </Reference>
-    <Reference Include="MassTransit.NHibernateIntegration">
-      <HintPath>..\..\packages\MassTransit.NHibernate.2.1.0\lib\net40\MassTransit.NHibernateIntegration.dll</HintPath>
+      <HintPath>..\packages\MassTransit.2.1.0\lib\net40\MassTransit.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit.StructureMapIntegration">
-      <HintPath>..\..\packages\MassTransit.StructureMap.2.1.0\lib\net40\MassTransit.StructureMapIntegration.dll</HintPath>
+      <HintPath>..\packages\MassTransit.StructureMap.2.1.0\lib\net40\MassTransit.StructureMapIntegration.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit.Transports.MSMQ">
-      <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.Transports.MSMQ.dll</HintPath>
+      <HintPath>..\packages\MassTransit.2.1.0\lib\net40\MassTransit.Transports.MSMQ.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit.Transports.RabbitMq">
-      <HintPath>..\..\packages\MassTransit.RabbitMQ.2.1.0\lib\net40\MassTransit.Transports.RabbitMq.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\..\packages\NHibernate.3.2.0.4000\lib\Net35\NHibernate.dll</HintPath>
+      <HintPath>..\packages\MassTransit.RabbitMQ.2.1.0\lib\net40\MassTransit.Transports.RabbitMq.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\packages\RabbitMQ.Client.2.7.1\lib\net30\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\packages\RabbitMQ.Client.2.7.1\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
-      <HintPath>..\..\packages\structuremap.2.6.3\lib\StructureMap.dll</HintPath>
+      <HintPath>..\packages\structuremap.2.6.3\lib\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -74,29 +62,60 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\NHibernateSagaRegistry.cs" />
-    <Compile Include="Configuration\ServerBusRegistry.cs" />
-    <Compile Include="Consumers\HandleEverything.cs" />
+    <Compile Include="Configuration\ClientBusRegistry.cs" />
+    <Compile Include="Consumers\HandleIncomeChange.cs" />
+    <Compile Include="Consumers\HandleNameChanged.cs" />
+    <Compile Include="PeopleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PeopleForm.Designer.cs">
+      <DependentUpon>PeopleForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <EmbeddedResource Include="PeopleForm.resx">
+      <DependentUpon>PeopleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ohio.Counties.Franklin.MessageBus.Configuration\Ohio.Counties.Franklin.MessageBus.Configuration.csproj">
+    <ProjectReference Include="..\src\Ohio.Counties.Franklin.MessageBus.Configuration\Ohio.Counties.Franklin.MessageBus.Configuration.csproj">
       <Project>{446CD7A9-16B6-4F84-8099-320E6E285550}</Project>
       <Name>Ohio.Counties.Franklin.MessageBus.Configuration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ohio.Counties.Franklin.MessageBus.Contracts\Ohio.Counties.Franklin.MessageBus.Contracts.csproj">
+    <ProjectReference Include="..\src\Ohio.Counties.Franklin.MessageBus.Contracts\Ohio.Counties.Franklin.MessageBus.Contracts.csproj">
       <Project>{FDCA1CDC-7CF2-43EC-B7FE-B8C63BC1FA59}</Project>
       <Name>Ohio.Counties.Franklin.MessageBus.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
