--- a/src/Ohio.Counties.Franklin.MessageBus.Client1/Ohio.Counties.Franklin.MessageBus.Client1.csproj
+++ b/src/Ohio.Counties.Franklin.MessageBus.Client1/Ohio.Counties.Franklin.MessageBus.Client1.csproj
@@ -41,6 +41,9 @@
     <Reference Include="MassTransit">
       <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.dll</HintPath>
     </Reference>
+    <Reference Include="MassTransit.StructureMapIntegration, Version=2.1.408.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\MassTransit.StructureMap.2.1.0\lib\net40\MassTransit.StructureMapIntegration.dll</HintPath>
+    </Reference>
     <Reference Include="MassTransit.Transports.MSMQ">
       <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.Transports.MSMQ.dll</HintPath>
     </Reference>
