--- a/src/Ohio.Counties.Franklin.MessageBus.Configuration/Ohio.Counties.Franklin.MessageBus.Configuration.csproj
+++ b/src/Ohio.Counties.Franklin.MessageBus.Configuration/Ohio.Counties.Franklin.MessageBus.Configuration.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusRegistry.cs" />
+    <Compile Include="NHibernateSagaPersistenceRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureMapBootstrapper.cs" />
   </ItemGroup>
