--- a/src/Ohio.Counties.Franklin.MessageBus.Contracts/Ohio.Counties.Franklin.MessageBus.Contracts.csproj
+++ b/src/Ohio.Counties.Franklin.MessageBus.Contracts/Ohio.Counties.Franklin.MessageBus.Contracts.csproj
@@ -31,6 +31,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\..\packages\FluentNHibernate.1.3.0.717\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="Magnum, Version=2.0.0.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Magnum.2.0.0.4\lib\NET40\Magnum.dll</HintPath>
+    </Reference>
+    <Reference Include="MassTransit">
+      <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.dll</HintPath>
+    </Reference>
+    <Reference Include="MassTransit.NHibernateIntegration">
+      <HintPath>..\..\packages\MassTransit.NHibernate.2.1.0\lib\net40\MassTransit.NHibernateIntegration.dll</HintPath>
+    </Reference>
+    <Reference Include="MassTransit.Transports.MSMQ">
+      <HintPath>..\..\packages\MassTransit.2.1.0\lib\net40\MassTransit.Transports.MSMQ.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\..\packages\NHibernate.3.2.0.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,8 +61,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TextChanged.cs" />
+    <Compile Include="IncomeChange.cs" />
+    <Compile Include="IncomeChangeApproval.cs" />
+    <Compile Include="IncomeChangeRejection.cs" />
+    <Compile Include="IncomeChangeRequest.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="NameChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SagaMaps\ApprovalSagaMap.cs" />
+    <Compile Include="Sagas\ApprovalSaga.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
