--- a/src/Ohio.Counties.Franklin.MessageBus.Client3/Ohio.Counties.Franklin.MessageBus.Client3.csproj
+++ b/src/Ohio.Counties.Franklin.MessageBus.Client3/Ohio.Counties.Franklin.MessageBus.Client3.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D2EEA61D-BB0C-4DCC-9014-CB5B5C08563D}</ProjectGuid>
+    <ProjectGuid>{0F8CE6EB-624A-4BDC-84D4-37771DBA0FA7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ohio.Counties.Franklin.MessageBus.Client2</RootNamespace>
-    <AssemblyName>Ohio.Counties.Franklin.MessageBus.Client2</AssemblyName>
+    <RootNamespace>Ohio.Counties.Franklin.MessageBus.Client3</RootNamespace>
+    <AssemblyName>Ohio.Counties.Franklin.MessageBus.Client3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -35,11 +35,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\packages\FluentNHibernate.1.3.0.717\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
     <Reference Include="Magnum">
       <HintPath>..\packages\Magnum.2.0.0.4\lib\NET40\Magnum.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit">
       <HintPath>..\packages\MassTransit.2.1.0\lib\net40\MassTransit.dll</HintPath>
+    </Reference>
+    <Reference Include="MassTransit.NHibernateIntegration">
+      <HintPath>..\packages\MassTransit.NHibernate.2.1.0\lib\net40\MassTransit.NHibernateIntegration.dll</HintPath>
     </Reference>
     <Reference Include="MassTransit.StructureMapIntegration">
       <HintPath>..\packages\MassTransit.StructureMap.2.1.0\lib\net40\MassTransit.StructureMapIntegration.dll</HintPath>
@@ -49,6 +58,9 @@
     </Reference>
     <Reference Include="MassTransit.Transports.RabbitMq">
       <HintPath>..\packages\MassTransit.RabbitMQ.2.1.0\lib\net40\MassTransit.Transports.RabbitMq.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.2.0.4000\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client">
       <HintPath>..\packages\RabbitMQ.Client.2.7.1\lib\net30\RabbitMQ.Client.dll</HintPath>
@@ -68,20 +80,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\ClientBusRegistry.cs" />
-    <Compile Include="Consumers\HandleIncomeChange.cs" />
-    <Compile Include="Consumers\HandleNameChanged.cs" />
-    <Compile Include="PeopleForm.cs">
+    <Compile Include="ApprovalForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PeopleForm.Designer.cs">
-      <DependentUpon>PeopleForm.cs</DependentUpon>
+    <Compile Include="ApprovalForm.Designer.cs">
+      <DependentUpon>ApprovalForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Person.cs" />
+    <Compile Include="Configuration\ClientBusRegistry.cs" />
+    <Compile Include="Configuration\NHibernateSagaRegistry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="PeopleForm.resx">
-      <DependentUpon>PeopleForm.cs</DependentUpon>
+    <EmbeddedResource Include="ApprovalForm.resx">
+      <DependentUpon>ApprovalForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -106,16 +116,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Ohio.Counties.Franklin.MessageBus.Configuration\Ohio.Counties.Franklin.MessageBus.Configuration.csproj">
+    <ProjectReference Include="..\Ohio.Counties.Franklin.MessageBus.Configuration\Ohio.Counties.Franklin.MessageBus.Configuration.csproj">
       <Project>{446CD7A9-16B6-4F84-8099-320E6E285550}</Project>
       <Name>Ohio.Counties.Franklin.MessageBus.Configuration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\src\Ohio.Counties.Franklin.MessageBus.Contracts\Ohio.Counties.Franklin.MessageBus.Contracts.csproj">
+    <ProjectReference Include="..\Ohio.Counties.Franklin.MessageBus.Contracts\Ohio.Counties.Franklin.MessageBus.Contracts.csproj">
       <Project>{FDCA1CDC-7CF2-43EC-B7FE-B8C63BC1FA59}</Project>
       <Name>Ohio.Counties.Franklin.MessageBus.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
